# help-desk

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml
help_desk_api/: pyproject.toml
help_desk_api/alembic/: env.py
help_desk_api/alembic/versions/: 3dd91a069034_create_user_table.py  679728412e1f_create_ticket_table.py  921d69e1ad0c_create_ticket_history_table.py
help_desk_api/src/help_desk_api/: main.py
help_desk_api/src/help_desk_api/config/: settings.py  test.py
help_desk_api/src/help_desk_api/db/: base.py  session.py
help_desk_api/src/help_desk_api/db/enum/: history_actions.py  ticket_priority.py  ticket_status.py  user_role.py
help_desk_api/src/help_desk_api/db/models/: ticket.py  ticket_history.py  user.py
help_desk_api/src/help_desk_api/exceptions/: ticket_exceptions.py  user_exceptions.py
help_desk_api/src/help_desk_api/routers/: admin_routers.py  auth_routers.py  tickets_employee_routers.py  tickets_routers.py  tickets_technician_routers.py
help_desk_api/src/help_desk_api/schema/: dashboard_schema.py  history_schema.py  ticket_schema.py  user.py  user_schema.py
help_desk_api/src/help_desk_api/security/: auth_depedence.py  password_hash.py  token.py
help_desk_api/src/help_desk_api/services/: admin_core_services.py  admin_services.py  history.py  session_ticket_services.py  ticket_core_services.py  ticket_employee_services.py  ticket_history_services.py  ticket_services.py  ticket_technician_services.py  user_services.py
help_desk_api/tests/: conftest.py  test_employee_ticket.py  test_technician_ticket.py  test_user.py
(+1 files in other folders)
